--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="./style.css">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>味補鮮知 - 海鮮的秘密 | 你不可不知的台灣海鮮食魚文化</title>
+  <title>發出可剝的聲音 | 味補鮮知</title>
   <link REL="SHORTCUT ICON" href="https://raw.githubusercontent.com/87penginnouta/Cfood_enter/master/logo/favicon1.ico">
   <meta name="Description" content="海鮮大揭密，圖文x遊戲x社群，從辨識、挑貨技巧、食材處理至相關美食，一起來場水中探險。本網站為嘉義大學數位學習設計與管理學系110級畢業專題。">
   <meta name="robots" content="index, follow" />
@@ -21,9 +21,7 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<html>
 
-<body>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
@@ -841,9 +839,7 @@
     <div class="footer_bg"></div>
   </div>
 
-</body>
 
-</html>
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js'></script><script  src="./script.js"></script>
