--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </div>
 
       <div class="fairy_content f1" data-aos="fade-right" data-aos-duration="1500" data-aos-easing="ease-in-back" data-aos-delay="1200" data-aos-offset="0">
-        <img class="fairy_open" src="https://raw.githubusercontent.com/87penginnouta/Cfood_Cephalopoda/gh-pages/fairy1%402x.png" alt="">
+        <img class="fairy_open" src="https://raw.githubusercontent.com/87penginnouta/Cfood_Shrimp/gh-pages/fairy4.png" alt="">
       </div>
 
       <div class="open_content" data-aos="fade-left" data-aos-duration="1500" data-aos-easing="ease-in-back" data-aos-delay="1200" data-aos-offset="0">
@@ -105,7 +105,7 @@
       <div class="fairy_content f2" data-aos="fade-down-left">
         <div class="modal_compare">
           <label class="compare_btn" for="modal-13">
-            <img class="animal_compare" src="https://raw.githubusercontent.com/87penginnouta/Cfood_Cephalopoda/gh-pages/fairy1_2%402x.png" alt="www">
+            <img class="animal_compare" src="https://raw.githubusercontent.com/87penginnouta/Cfood_Shrimp/gh-pages/fairy4.png" alt="www">
             <div class="fairy_talk">
               <img class="fairy_bubble" src="https://raw.githubusercontent.com/87penginnouta/Cfood_Cephalopoda/gh-pages/bubble%402x.png" alt="">
               <span class="talk_word">點我看尺寸比較圖！</span>
