--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
       <p class="copyright">© 嘉義大學數位系110級畢業專題 味補鮮知 - 海鮮的秘密</p>
       <div class="sns_content s_footer">
         <a class="sns_btn s_fb" href="https://www.facebook.com/Cfood.secret" target="_blank">
-          <img class="btn_img" src="https://www.flaticon.com/svg/static/icons/svg/20/20837.svg" alt="味補鮮知_facebook">
+          <img class="btn_img" src="./img/facebook.svg" alt="味補鮮知_facebook">
         </a>
         <a class="sns_btn s_ig" href="https://www.instagram.com/fishkw.2020/" target="_blank">
-          <img class="btn_img" src="https://www.flaticon.com/svg/static/icons/svg/1384/1384031.svg"
+          <img class="btn_img" src="./img/ins.svg"
             alt="味補鮮知_instagram">
         </a>
       </div>
@@ -77,11 +77,7 @@
         <span class="open_highlight">蝦類</span>呀？<br>牠們是有著長長腹部與觸角的甲殼動物！<br>五對「泳足」用來游泳移動，<br>另外五對「步足」則是行走抓食物的利器！<br><br>
         作為台灣常見的海鮮食材，<br>牠們有著抗老的蝦紅素，以及鮮甜的蝦膏，<br>快跟著<span class="open_highlight">新月精靈</span>一起認識蝦類吧！
       </div>
-      <div id="godown_content">
-        <div class="godown">
-          <img class="btn_img down" src="https://www.flaticon.com/svg/static/icons/svg/72/72436.svg" alt="味補鮮知">
-        </div>
-      </div>
+      <div id="godown_content"></div>
     </div>
 
     <div id="section2">
@@ -288,7 +284,7 @@
 
     <div id="buttons_all">
       <a id="gotop" href="#">
-        <img class="btn_img" src="https://www.flaticon.com/svg/static/icons/svg/72/72436.svg" alt="味補鮮知_頁首">
+        <img class="btn_img" src="./img/up.svg" alt="味補鮮知_頁首">
       </a>
     </div>
 
@@ -708,10 +704,10 @@
         </div>
         <div class="sns_content s_menu">
           <a class="sns_btn s_fb" href="https://www.facebook.com/Cfood.secret" target="_blank">
-            <img class="btn_img" src="https://www.flaticon.com/svg/static/icons/svg/20/20837.svg" alt="味補鮮知_facebook">
+            <img class="btn_img" src="./img/facebook.svg" alt="味補鮮知_facebook">
           </a>
           <a class="sns_btn s_ig" href="https://www.instagram.com/fishkw.2020/" target="_blank">
-            <img class="btn_img" src="https://www.flaticon.com/svg/static/icons/svg/1384/1384031.svg"
+            <img class="btn_img" src="./img/ins.svg"
               alt="味補鮮知_instagram">
           </a>
         </div>
