--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="快跟著新月精靈一起認識蝦類吧！本網站為嘉義大學數位學習設計與管理學系110級畢業專題。">
+  <meta name="description" content="作為台灣常見的海鮮食材，牠們有著抗老的蝦紅素，以及鮮甜的蝦膏，快跟著新月精靈一起認識蝦類吧！本網站為嘉義大學數位學習設計與管理學系110級畢業專題。">
   <meta name="author" content="味補鮮知">
   <meta property="og:image" content="./img/bg/og72.jpg" />
   <title>發出可剝的聲音 | 味補鮮知</title>
-  <link rel="icon" href="./img/bg/favicon1.ico">
+  <link rel="icon" href="./img/bg/f.svg">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Monda&amp;family=Noto+Sans+TC&amp;display=swap">
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./rwd.css">
@@ -237,7 +237,7 @@
 
     <div id="buttons_all">
       <a id="gotop" href="#">
-        <img class="btn_img" src="./img/up.svg" alt="味補鮮知_頁首">
+        <img class="btn_img" src="./img/up.svg" alt="回到上方">
       </a>
     </div>
 
