--- a/index.html
+++ b/index.html
@@ -14,6 +14,46 @@
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./rwd.css">
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
+  <!-- 由 Google 結構化資料標記協助工具產生的 JSON-LD 標記。 -->
+  <script type="application/ld+json">
+    [
+      {
+        "@context": "http://schema.org",
+        "@type": "Article",
+        "name": "如何帶回最新鮮的蝦類呢？",
+        "image": "https://87penginnouta.github.io/Cfood_Shrimp/img/pick/1.jpg",
+        "articleBody": "【看蝦鬚】</SPAN><BR/>觀察蝦鬚是否完整無斷裂。"
+      },
+      {
+        "@context": "http://schema.org",
+        "@type": "Article",
+        "name": "如何帶回最新鮮的蝦類呢？",
+        "image": "https://87penginnouta.github.io/Cfood_Shrimp/img/pick/2.jpg",
+        "articleBody": "【看蝦頭】</SPAN><BR/>蝦頭與蝦身連接處緊密、無脫落。"
+      },
+      {
+        "@context": "http://schema.org",
+        "@type": "Article",
+        "name": "如何帶回最新鮮的蝦類呢？",
+        "image": "https://87penginnouta.github.io/Cfood_Shrimp/img/pick/3.jpg",
+        "articleBody": "【聞味道】</SPAN><BR/>臭臭不行！有異味即不新鮮。"
+      },
+      {
+        "@context": "http://schema.org",
+        "@type": "Article",
+        "name": "如何帶回最新鮮的蝦類呢？",
+        "image": "https://87penginnouta.github.io/Cfood_Shrimp/img/pick/4.jpg",
+        "articleBody": "【看蝦身】</SPAN><BR/>若外殼帶有黏液，建議不要購買。"
+      },
+      {
+        "@context": "http://schema.org",
+        "@type": "Article",
+        "name": "終於買回蝦類，該如何處理牠們呢？",
+        "image": "https://87penginnouta.github.io/Cfood_Shrimp/img/prepare/1.jpg",
+        "articleBody": "為什麼常見的炸蝦都是筆直的？只要在腹部用刀劃斜線，切斷肌肉組織，煮熟後蝦子就不會捲起囉！"
+      }
+    ]
+    </script>
 </head>
 
 <body>
